@@ -1,7 +1,7 @@
 
 # Setting DEBUG to True when freezing provides a detailed
 # traceback to stderr on errors.
-DEBUG = True
+DEBUG = False
 
 
 # The following settings have defaults tailored to my 'gh-pages' branch.
